--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <link rel="stylesheet" href="./css/base.css">
 </head>
 <body>
-<div id="header"></div>
-<div id="body"></div>
-<div id="footer">
-
-</div>
-<script src="js/fk.js"></script>
+<script>location.href = './views/index.html'</script>
 </body>
 </html>
